--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,5 @@
 <div id="sunglass">{% include svg/sunglass.html %}</div>
 <div id="logo">{% include svg/logo.html %}</div>
 <div id="beard">{% include svg/beard.html %}</div>
-<a href="#" class="go-btn">Celebrating 1000000 Veiws</a>
+<a href="https://www.youtube.com/watch?v=89sacBIEq4g" class="go-btn">Celebrating 1000000 Veiws</a>
 </div>
