--- a/_includes/swirls.html
+++ b/_includes/swirls.html
@@ -2,33 +2,59 @@
   {% include svg/flags.html %}
 </div>
 <div class="swirls-container">
-  <div class="swirls-ii-1">
+  <div class="swirls-ii swirls-ii-1">
   {% include svg/swirls-ii.html %}
   </div>
-  <div class="swirls-ii-2">
+  <div class="swirls-ii swirls-ii-2">
   {% include svg/swirls-ii.html %}
   </div>
-  <div class="swirls-ii-3">
+  <div class="swirls-ii swirls-ii-3">
   </div>
-  <div class="swirls-ii-4">
+  <div class="swirls-ii swirls-ii-4">
   {% include svg/swirls-ii.html %}
   </div>
-  <div class="swirls-ii-5">
+  <div class="swirls-ii swirls-ii-5">
+  {% include svg/swirls-ii.html %}
+  </div>  <div class="swirls-ii swirls-ii-6">
+  {% include svg/swirls-ii.html %}
+  </div>
+  <div class="swirls-ii swirls-ii-7">
+  {% include svg/swirls-ii.html %}
+  </div>
+  <div class="swirls-ii swirls-ii-8">
+  </div>
+  <div class="swirls-ii swirls-ii-9">
+  {% include svg/swirls-ii.html %}
+  </div>
+  <div class="swirls-ii swirls-ii-10">
   {% include svg/swirls-ii.html %}
   </div>
 
-  <div class="swirls-i-1">
+  <div class="swirls-i swirls-i-1">
   {% include svg/swirls-i.html %}
   </div>
-  <div class="swirls-i-2">
+  <div class="swirls-i swirls-i-2">
   {% include svg/swirls-i.html %}
   </div>
-  <div class="swirls-i-3">
+  <div class="swirls-i swirls-i-3">
   </div>
-  <div class="swirls-i-4">
+  <div class="swirls-i swirls-i-4">
   {% include svg/swirls-i.html %}
   </div>
-  <div class="swirls-i-5">
+  <div class="swirls-i swirls-i-5">
+  {% include svg/swirls-i.html %}
+  </div>  <div class="swirls-i swirls-i-6">
+  {% include svg/swirls-i.html %}
+  </div>
+  <div class="swirls-i swirls-i-7">
+  {% include svg/swirls-i.html %}
+  </div>
+  <div class="swirls-i swirls-i-8">
+  </div>
+  <div class="swirls-i swirls-i-9">
+  {% include svg/swirls-i.html %}
+  </div>
+  <div class="swirls-i swirls-i-10">
   {% include svg/swirls-i.html %}
   </div>
 </div>
