--- a/assets/css/sections/_swirls.sass
+++ b/assets/css/sections/_swirls.sass
@@ -15,7 +15,7 @@
 	top: 0
 	z-index: 1
 
-[class^='swirls-ii-']
+.swirls-ii
 	position: absolute
 	width: 40px
 	right: 0
@@ -25,8 +25,6 @@
 
 @for $i from 1 through 5
 	.swirls-ii-#{$i}
-		margin-left: -10px
-		left: unquote($i*15 + "%")
 		+animation(swirls-ii 7s linear infinite both unquote($i*1 + "s"))
 	
 	+keyframes(swirls-ii)
@@ -45,32 +43,31 @@
 			+transform(translatex(10px))
 			top: 100%
 
-[class^='swirls-i-']
+.swirls-i
 	position: absolute
 	width: 200px
 	right: 0
 	left: 0
-	top: -100px
 	margin: auto
+	top: -200px
 
-@for $i from 5 through 1
+
+@for $i from 1 through 10
 	.swirls-i-#{$i}
-		margin-left: unquote($i*15 + "%")
-
-		+animation(swirls-i 7s linear infinite both unquote($i*-1.5 + "s"))
+		+animation(swirls-i 7s linear infinite both unquote($i*1.5 + "s"))
 	
-	+keyframes(swirls-i)
-		0%
-			top: -100px
-			+transform(translatex(0px)) 
-		20%
-			+transform(translatex(10px))
-		40%
-			+transform(translatex(0px))
-		60%
-			+transform(translatex(10px))
-		80%
-			+transform(translatex(0px))
-		100%
-			+transform(translatex(10px))
-			top: 100%
++keyframes(swirls-i)
+	0%
+		top: -200px
+		+transform(translatex(0px)) 
+	20%
+		+transform(translatex(10px))
+	40%
+		+transform(translatex(0px))
+	60%
+		+transform(translatex(10px))
+	80%
+		+transform(translatex(0px))
+	100%
+		+transform(translatex(10px))
+		top: 100%
